--- a/pagina com css e js externos/parteCss.css
+++ b/pagina com css e js externos/parteCss.css
@@ -8,29 +8,29 @@ body {
     box-shadow: 2px 2px 2px rgb(61, 61, 61);
     margin: 20px;
     padding: 20px;
+    padding-bottom: 40px;
     border-radius: 6px;
     font-family: Arial, Helvetica, sans-serif;
     border: 3px solid #f1f1f1;
-
 }
 
 
 /*aqui vai a main*/
 main {
-        display: flex;
+    display: flex;
 }
 
 /* Boxes diferentes */
 .diferentes {
     background-color: rgb(132, 185, 230);
-    position: fixed;
+    display: flex;
     bottom: 0;
     border: 3px solid #f1f1f1;
 }
 
 /* artigo lateral */
 aside {
-    width: auto;
+    width: 80px;
     padding-left: 15px;
     margin-left: 15px;
     float: right;
